--- a/StudentWebApi/appsettings.json
+++ b/StudentWebApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=postgres;Database=testdb; "},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
