Update Migr without DateTime> because had problem with this items

--- a/StudentWebApi/appsettings.json
+++ b/StudentWebApi/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionStrings": {"DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=postgres;Database=testdb; "},
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=testdb;Username=postgres;Password=Paradise71;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
